Utworzono za pomocą Colaboratory

--- a/My_first_ANN_regression_experiment.ipynb
+++ b/My_first_ANN_regression_experiment.ipynb
@@ -19,7 +19,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/TytanMikJas/DeepLearningJourney/blob/main/My_first_ANN_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/TytanMikJas/DeepLearningJourney/blob/main/My_first_ANN_regression_experiment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -46,7 +46,7 @@
         "from IPython import display\n",
         "matplotlib_inline.backend_inline.set_matplotlib_formats('svg')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "48SK-Tk02uc5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
       "metadata": {
         "id": "7Cf7cBE7z_RP"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
       "metadata": {
         "id": "6UINcWvu6BJL"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
         "id": "3TQNUixD2nBG",
         "outputId": "1131ca62-d3d4-4980-94f5-1ecaaaac8991"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -206,6 +206,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#The conclusion of this experiment\n",
+        "\n",
+        "My experiment shows, that the model performs poorly when the slope gets closer to zero. The slope parameter is manipulating the values on y-axis, which are dependent on the values from:  (x-axis * slope) + number from random-normal-distribution.\n",
+        "\n",
+        "Because the x-axis is manipulated by the slope, at value 0 the only numbers we can outline at y-axis are the one from random-normal-distribution. It's transparent that the model cannot perform well for such parameter, because it is trying to predict randomess."
+      ],
+      "metadata": {
+        "id": "rTpDPUwuOLyk"
+      }
     }
   ]
 }
