--- a/GAN_FMNIST.ipynb
+++ b/GAN_FMNIST.ipynb
@@ -33,11 +33,7 @@
         "id": "bhWV8oes-wKR"
       },
       "source": [
-        "# COURSE: A deep understanding of deep learning\n",
-        "## SECTION: Generative adversarial networks\n",
-        "### LECTURE: Linear GAN with MNIST\n",
-        "#### TEACHER: Mike X Cohen, sincxpress.com\n",
-        "##### COURSE URL: udemy.com/course/deeplearning_x/?couponCode=202305"
+        "# COURSE: This Notebook contains my first GAN created to make new fashion :)\n",
       ]
     },
     {
